--- a/index.html
+++ b/index.html
@@ -13,23 +13,24 @@
 <header>
 <div class="contenedor">
     <div class="menu">
-      <p>JONATHAN LIFSCHITZ</p>
-      <nav>
+       <p>
+        <img src="img/HardLevelLogo.png" class="logo" heigth="200px" width="200px " alt="logo empresa">
+       </p>
+       <nav>
         <ul class="lista">
           <li>Sobre mi</li>
           <li>Servicios</li>
           <li>Mis Trabajos</li>
-          <li>¿Por que trabajar conmigo?</li>
-          <li>Blog</li>
           <li>Contacto</li>
         </ul>
       </nav>
     </div>
 
     <div class="titular">
-      <h1>Jonathan Lifschitz</h1>
-      <h2>Diseñador & Desarrollador Web</h2>
-      <a href="">VER MIS TRABAJOS</a>
+      <h1>Hard Level</h1>
+      <h2>We are a small, independent game development studio made up of industry professionals eager to create their own projects.
+        We are currently developing The Backrooms The Game.</h2>
+      <a href="">sobre nosotros </a>
     </div>
 
 </div>
