--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 <meta charset="utf-8">
-<title>Jonathan Lifschitz - Diseñador Web</title>
+<title>Hard Level</title>
 <link rel="stylesheet" href="estilos.css">
 <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js"></script>
@@ -37,15 +37,14 @@
 </header>
 
 <section>
-  <h3>Sobre mi</h3>
+  <h3>Sobre nosotros</h3>
   <div class="contenedor-sobremi">
-    <img class="imagen-sobremi" src="yo.jpg" alt="Jonathan Lifschitz" title="Jonathan Lifschitz">
+    <img class="imagen-sobremi" src="img/HardLevelLogo.png" width="200px" height="200px" alt="logo2" title="logo de la empresa">
     <div class="contenedor-parrafo-y-boton">
-      <p>Mi nombre es Jonathan Lifschitz y soy diseñador de páginas web. Tengo la experiencia en desarrollo de sitios web para pequeñas y medianas empresas, hasta tiendas en línea con carrito de compras.</p>
-      <p>Me aseguro de utilizar siempre las últimas tecnologías de desarrollo web: HTML5, CSS3, jQuery, Wordpress. Si necesitás una página web moderna, funcional, que se adapte a todos los diferentes tipos de pantalla, te aseguro que llegaste al lugar correcto.</p>
-      <p class="parrafo-final">Podes ponerte en contacto conmigo a través de Facebook, Linkedin o completando el formulario de contacto que se encuentra al final de mi sitio web.</p>
-      <a>VER MIS TRABAJOS</a>
+      <p>Marcelo Hugo Tinelli Domeño ​ es un conductor, empresario, periodista deportivo, locutor de radio, dirigente deportivo y productor de televisión argentino. Es el expresidente de la Liga Profesional y actual vicepresidente 4° de la Asociación del Fútbol Argentino. 
+      </p>
     </div>
+    <a>VER MIS TRABAJOS</a>
 </div>
 </section>
 
