--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
        </p>
        <nav>
         <ul class="lista">
-          <li>Sobre mi</li>
+          <li>Sobre nosotros</li>
           <li>Servicios</li>
           <li>Mis Trabajos</li>
           <li>Contacto</li>
@@ -51,37 +51,37 @@
 <section>
     <h3>Servicios</h3>
     <div class="contenedor-servicios">
-    <div class="servicio violeta">
-      <h4>Diseño Web</h4>
-      <p>Páginas web atractivas y funcionales con el objetivo de satisfacer todas tus expectativas. La importancia del diseño es fundamental para tener éxito y atraer a tus visitantes. También lo es la velocidad de carga del sitio web, deben ser rápidos para que el visitante tenga la mejor experiencia</p>
+    <div class="servicio violeta1">
+      <h4>Albertito run</h4>
+      <p>albertito run es un nene que corre jeje</p>
       <img src="monitor.png">
     </div>
 
-    <div class="servicio celeste">
+    <div class="servicio celeste1">
       <h4>Responsive Design</h4>
       <p>Páginas web atractivas y funcionales con el objetivo de satisfacer todas tus expectativas. La importancia del diseño es fundamental para tener éxito y atraer a tus visitantes. También lo es la velocidad de carga del sitio web, deben ser rápidos para que el visitante tenga la mejor experiencia</p>
       <img src="mobile.png">
     </div>
 
-    <div class="servicio violeta">
+    <div class="servicio violeta2">
       <h4>SEO</h4>
       <p>Páginas web atractivas y funcionales con el objetivo de satisfacer todas tus expectativas. La importancia del diseño es fundamental para tener éxito y atraer a tus visitantes. También lo es la velocidad de carga del sitio web, deben ser rápidos para que el visitante tenga la mejor experiencia</p>
       <img src="seo.png">
     </div>
 
-    <div class="servicio celeste">
+    <div class="servicio celeste2">
       <h4>Autoadministrable</h4>
       <p>Páginas web atractivas y funcionales con el objetivo de satisfacer todas tus expectativas. La importancia del diseño es fundamental para tener éxito y atraer a tus visitantes. También lo es la velocidad de carga del sitio web, deben ser rápidos para que el visitante tenga la mejor experiencia</p>
       <img src="wordpress.png">
     </div>
 
-    <div class="servicio violeta">
+    <div class="servicio violeta3">
       <h4>Mantenimiento</h4>
       <p>Páginas web atractivas y funcionales con el objetivo de satisfacer todas tus expectativas. La importancia del diseño es fundamental para tener éxito y atraer a tus visitantes. También lo es la velocidad de carga del sitio web, deben ser rápidos para que el visitante tenga la mejor experiencia</p>
       <img src="mante.png">
     </div>
 
-    <div class="servicio celeste">
+    <div class="servicio celeste3">
       <h4>Marketing Digital</h4>
       <p>Páginas web atractivas y funcionales con el objetivo de satisfacer todas tus expectativas. La importancia del diseño es fundamental para tener éxito y atraer a tus visitantes. También lo es la velocidad de carga del sitio web, deben ser rápidos para que el visitante tenga la mejor experiencia</p>
       <img src="marketing.png">
